# NextGenPlatformUnni

./: .env.example  README.md  Taskfile.yml  docker-compose.yml  treatment_samples.json
.kiro/agents/: ai-dlc.json  wireframe-generator.md
.kiro/steering/: api-standards.md  frontend-conventions.md  go-conventions.md  product.md  python-conventions.md  structure.md  tech.md  testing-standards.md
.playwright-mcp/: page-2026-05-20T07-53-22-414Z.yml
admin-service/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  seed_data.json
admin-service/app/: config.py  main.py  seed.py
admin-service/app/db/: session.py
admin-service/app/models/: __init__.py
admin-service/app/repositories/: __init__.py
admin-service/app/routers/: ai_suggest.py  cycle_rules.py  treatment_data.py
admin-service/app/schemas/: __init__.py
admin-service/app/services/: __init__.py  ai_suggest.py
admin-service/migrations/versions/: 001_initial_schema.py
admin-service/tests/: conftest.py  test_ai_suggest.py  test_cycle_rules.py  test_treatment_data.py
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/inception/application-design/: admin-service.md  (+7 more)
calendar-service/: Dockerfile  Taskfile.yml  go.mod  go.sum
calendar-service/config/: config.go
calendar-service/migrations/: 000001_init.down.sql  000001_init.up.sql
docs/: PRD.md
web/: Dockerfile  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
web/e2e/: calendar.spec.ts
web/test-results/: .last-run.json
wireframes/: AddRecordPage.html  CalendarPage.html  RecordDetailPage.html
(+96 files in other folders)
